Hackathon, Sponsors, STI Award and Menu update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="STRIDE ETHIOPIA EXPO 2024">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
@@ -53,10 +52,10 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li class="active"><a href="./index.html">Home</a></li>
-                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                                <!-- <li><a href="./schedule.html">Agenda</a></li> -->
-                                <li><a href="#">Exhibitor</a></li>
-                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
@@ -1058,25 +1057,17 @@
                             Ethiopia annual hackathon event! This is your chance to unleash your
                             creativity, collaborate with like-minded individuals, and bring your innovative ideas to
                             life.</p>
-                        <h6>AgriTech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- Digital Real Time Weather Forecast</li>
-                            <li>- Market Information System </li>
+                            <li><b>AgriTech</b>: Digital Real Time Weather Forecast and Market Information System </li>
                         </ul>
-                        <h6>HealthTech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- Telemedicine (Remote Diagnostics)</li>
-                            <li>- AI in diseases surveillance, early detection and preventive healthcare </li>
+                            <li><b>HealthTech</b>: Telemedicine (Remote Diagnostics) and AI in diseases surveillance, early detection and preventive healthcare </li>
                         </ul>
-                        <h6> EduTech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- Digital class rooms and remote learning</li>
-                            <li>- Virtual Libraries </li>
+                            <li><b>EduTech</b>: Digital class rooms and remote learning and Virtual Libraries </li>
                         </ul>
-                        <h6> Tourism Tech </h6>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
-                            <li>- AI customized tourism marketing tools</li>
-                            <li>- VR/AR based tourism</li>
+                            <li><b>Tourism Tech</b>: AI customized tourism marketing tools and VR/AR based tourism</li>
                         </ul>
                         <a href="https://forms.gle/v7E3W75mbgyiXrKo9" target="_blank" class="price-btn">Register Now
                             <span class="arrow_right"></span></a>
@@ -1095,11 +1086,9 @@
                             groundbreaking mind or a revolutionary project and organization that deserves
                             recognition? The STI Award 2024 celebrate the remarkable achievements of individuals, teams,
                             and organization who are pushing the boundaries of science, technology, and innovation.
-                            We're looking for nominations in a variety of categories that showcase the transformative
-                            power of STI across different fields.
                         </p>
                         <br />
-                        <h5>Nomination Categories:</h5>
+                        <h5><b>Nomination Categories:</b></h5>
                         <ul style="padding-left: 50px; padding-right: 50px; text-align: left;">
                             <li>- Lifetime Achievement Award</li>
                             <li>- The Best Digitally Enabled Institutions Award</li>
