--- a/sponsors.html
+++ b/sponsors.html
@@ -37,21 +37,25 @@
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="STRIDE ETHIOPIA EXPO 2024">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
                 <nav class="mainmenu">
                     <ul>
-                        <li><p class="primary">Register Interest</p></li>
-                        <li><p class="primary-btn">Exhibit 2024</p></li>
+                        <li>
+                            <p class="primary" onclick="window.open('./participant.html', '_blank');">Register Interest
+                            </p>
+                        </li>
+                        <li>
+                            <p class="primary-btn" onclick="window.open('./exhibitor.html', '_blank');">Exhibit 2024</p>
+                        </li>
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-                                <li class="active"><a href="./speaker.html">Speakers</a></li>
-                                <!-- <li><a href="./schedule.html">Agenda</a></li> -->
-                                <li><a href="#">Exhibitor</a></li>
-                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <li class="active"><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
@@ -70,10 +74,10 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>Feature Speakers</h2>
+                        <h2>Sponsors</h2>
                         <div class="bt-option">
                             <a href="#">Home</a>
-                            <span>Our Speakers</span>
+                            <span>Our Sponsors</span>
                         </div>
                     </div>
                 </div>
@@ -91,23 +95,20 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker.png" alt="">
+                                    <img src="img/speakers/safaricom.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Dr. Abiy Ahmed</h4>
-                                        <span>EFDRE PM</span>
+                                        <h4>Safaricom Ethiopia</h4>
+                                        <span>Telecom</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
                                         <a href="#"><i class="fa fa-twitter"></i></a>
                                         <a href="#"><i class="fa fa-google-plus"></i></a>
                                     </div>
-                                    <p>Businesses often become known today through effective marketing. The marketing
-                                        may be in the form of a regular news item or half column society news in the
-                                        Sunday newspaper.</p>
                                 </div>
                             </div>
                         </div>
@@ -118,147 +119,29 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="si-pic">
-                                    <img src="img/speakers/speaker.png" alt="">
+                                    <img src="img/speakers/ethiotelecom.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="si-text">
                                     <div class="si-title">
-                                        <h4>Dr. Belete Molla</h4>
-                                        <span>MINT CEO</span>
+                                        <h4>EthioTelecom</h4>
+                                        <span>Telecom</span>
                                     </div>
                                     <div class="si-social">
                                         <a href="#"><i class="fa fa-facebook"></i></a>
                                         <a href="#"><i class="fa fa-twitter"></i></a>
                                         <a href="#"><i class="fa fa-google-plus"></i></a>
                                     </div>
-                                    <p>Businesses often become known today through effective marketing. The marketing
-                                        may be in the form of a regular news item or half column society news in the
-                                        Sunday newspaper.</p>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="speaker-item">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="si-pic">
-                                    <img src="img/team-member/member.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="si-text">
-                                    <div class="si-title">
-                                        <h4>Dr. Eleni Gabre-Madhin</h4>
-                                        <span>Founder of BlueMoon Ethiopia</span>
-                                    </div>
-                                    <div class="si-social">
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    </div>
-                                    <p>Businesses often become known today through effective marketing. The marketing
-                                        may be in the form of a regular news item or half column society news in the
-                                        Sunday newspaper.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6">
-                    <div class="speaker-item">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="si-pic">
-                                    <img src="img/speakers/speaker.png" alt="">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="si-text">
-                                    <div class="si-title">
-                                        <h4>Solomon Kassa</h4>
-                                        <span>Manager</span>
-                                    </div>
-                                    <div class="si-social">
-                                        <a href="#"><i class="fa fa-facebook"></i></a>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                        <a href="#"><i class="fa fa-google-plus"></i></a>
-                                    </div>
-                                    <p>Businesses often become known today through effective marketing. The marketing
-                                        may be in the form of a regular news item or half column society news in the
-                                        Sunday newspaper.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="load-more">
-                <a href="#" class="primary-btn">Load More</a>
-            </div>
-        </div>
-    </section>
-    <!-- Speaker Section End -->
-
-    <!-- Newslatter Section Begin -->
-    <section class="newslatter-section about-newslatter">
-        <div class="container">
-            <div class="newslatter-inner set-bg" data-setbg="img/newslatter-bg.jpg">
-                <div class="ni-text">
-                    <h3>Subscribe Newsletter</h3>
-                    <p>Subscribe to our newsletter and don’t miss anything</p>
-                </div>
-                <form action="#" class="ni-form">
-                    <input type="text" placeholder="Your email">
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-        </div>
-    </section>
-    <!-- Newslatter Section End -->
-
-    <!-- Contact Section Begin -->
-    <section class="contact-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="section-title">
-                        <h2>Location</h2>
-                        <p>Get directions to our event center</p>
-                    </div>
-                    <div class="cs-text">
-                        <div class="ct-address">
-                            <span>Address:</span>
-                            <p>Addis Ababa<br />Ethiopia</p>
-                        </div>
-                        <ul>
-                            <li>
-                                <span>Phone:</span>
-                                0111265737
-                            </li>
-                            <li>
-                                <span>Email:</span>
-                                contact@mint.gov.et
-                            </li>
-                        </ul>
-                        <div class="ct-links">
-                            <span>Website:</span>
-                            <p>https://mint.gov.et</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="cs-map"><iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.056267600396!2d38.76054691472543!3d9.022233093420393!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b843e35a0669d%3A0x214d553e46c229b0!2sNational%20Museum%20of%20Ethiopia!5e0!3m2!1sen!2set!4v1646802540558!5m2!1sen!2set"
-                            height="400" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Contact Section End -->
+    <!-- Speaker Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
