--- a/sti-award.html
+++ b/sti-award.html
@@ -32,28 +32,36 @@
     </div>
 
     <!-- Header Section Begin -->
-    <header class="header-section header-normal">
+    <header class="header-section fixed-top">
         <div class="container">
             <div class="logo">
                 <a href="./index.html">
                     <img src="img/logo.png" alt="STRIDE ETHIOPIA EXPO 2024">
-                    <!-- <h3 style="font-family: 'Times New Roman', Times, serif;">STRIDE ETHIOPIA EXPO 2024</h3> -->
                 </a>
             </div>
             <div class="nav-menu">
-                <nav class="mainmenu mobile-menu">
+                <nav class="mainmenu">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="#">Sponsors</a></li>
-                        <li><a href="./about-us.html">About</a></li>
-                        
-                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                        <!-- <li><a href="./schedule.html">Schedule</a></li> -->
-                        <!-- <li class="active"><a href="./blog.html">Blog</a></li> -->
-                        <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                        <li>
+                            <p class="primary" onclick="window.open('./participant.html', '_blank');">Register Interest
+                            </p>
+                        </li>
+                        <li>
+                            <p class="primary-btn" onclick="window.open('./exhibitor.html', '_blank');">Exhibit 2024</p>
+                        </li>
+                        <li><a>Menu ▼ </a>
+                            <ul class="dropdown mobile-menu">
+                                <li><a href="./index.html">Home</a></li>
+                                <li class="active"><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./exhibitor.html">Exhibitor</a></li>
+                                <li><a href="./sponsors.html">Sponsors</a></li>
+                                <li><a href="./about-us.html">About</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </nav>
-                <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
+                <!-- <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a> -->
             </div>
             <div id="mobile-menu-wrap"></div>
         </div>
@@ -66,11 +74,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb-text">
-                        <h2>News Latest</h2>
-                        <div class="bt-option">
-                            <a href="#">Home</a>
-                            <span>Our Blogs</span>
-                        </div>
+                        <h2>STI Award</h2>
                     </div>
                 </div>
             </div>
@@ -86,91 +90,45 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="blog-item set-bg" data-setbg="img/blog/blog-1.jpg">
-                                <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
-                                    <h5><a href="./blog-details.html">Google's AI Assistant Aims to Transcend the Smart Speaker</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
+                                    <h5>Lifetime Achievement Award</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="blog-item set-bg" data-setbg="img/blog/blog-2.jpg">
-                                <div class="bi-tag bg-gradient">Foody</div>
                                 <div class="bi-text">
-                                    <h5><a href="./blog-details.html">Free Classifiends Using Them To Promote</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
+                                    <h5>The Best Digitally Enabled Institutions Award</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="blog-item set-bg large-item" data-setbg="img/blog/blog-4.jpg">
-                        <div class="bi-tag bg-gradient">Business</div>
                         <div class="bi-text">
-                            <h3><a href="./blog-details.html">"Inspired By Modiji, Will Make Biopic": BJP's Ravi Kishan</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-7.jpg">
-                                <div class="bi-tag bg-gradient">Foody</div>
-                                <div class="bi-text">
-                                    <h5><a href="./blog-details.html">The ZenBook With a Touchpad That Lights Up</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-8.jpg">
-                                <div class="bi-tag bg-gradient">Foody</div>
-                                <div class="bi-text">
-                                    <h5><a href="./blog-details.html">Is the Detel Posh a Posh Speaker?</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
-                                </div>
-                            </div>
+                            <h3>Research Excellence Award</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="blog-item set-bg large-item" data-setbg="img/blog/blog-3.jpg">
-                        <div class="bi-tag bg-gradient">Marketing</div>
                         <div class="bi-text">
-                            <h3><a href="./blog-details.html">Lok Sabha Elections 2024 - In BJP, Only ''Tai'' Can Admonish Me: PM Modi On Sumitra
-                                Mahajan</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
+                            <h3>STI Excellence Award (under the categories of Youth, Women, & Person with Disabilities)</h3>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-md-12">
                             <div class="blog-item set-bg" data-setbg="img/blog/blog-5.jpg">
-                                <div class="bi-tag bg-gradient">Design</div>
                                 <div class="bi-text">
-                                    <h5><a href="./blog-details.html">The Biggest Stories Of January 06, 2024</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
+                                    <h3>Technological Innovation Award (honors the development of a new and impactful technology)</h3>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-6.jpg">
-                                <div class="bi-tag bg-gradient">UX/UI</div>
-                                <div class="bi-text">
-                                    <h5><a href="./blog-details.html">Alexa Can Now Show You Things!</a></h5>
-                                    <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="blog-item set-bg" data-setbg="img/blog/blog-9.jpg">
-                        <div class="bi-tag bg-gradient">Marketing</div>
-                        <div class="bi-text">
-                            <h3><a href="./blog-details.html">"Still Waiting For BJP To Make Me Chief Minister": Goa Assembly Speaker</a></h3>
-                            <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="load-more blog-more">
-                <a href="#" class="primary-btn">Load More</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAji9y5HKgekJpv6QmCz3SVvO82lW94NxX88m2Fj1BkyZ0Yw/viewform"
+                    target="_blank" class="primary-btn">Register Now <span class="arrow_right"></span></a>
             </div>
         </div>
     </section>
