--- a/about-us.html
+++ b/about-us.html
@@ -52,11 +52,10 @@
                         <li><a>Menu ▼ </a>
                             <ul class="dropdown mobile-menu">
                                 <li><a href="./index.html">Home</a></li>
-
-                                <!-- <li><a href="./speaker.html">Speakers</a></li> -->
-                                <!-- <li><a href="./schedule.html">Agenda</a></li> -->
-                                <li><a href="#">Exhibitor</a></li>
-                                <li><a href="#">Sponsors</a></li>
+                                <li><a href="./hackathon.html">Hackathon</a></li>
+                                <li><a href="./sti-award.html">STI Award</a></li>
+                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li class="active"><a href="./about-us.html">About</a></li>
                             </ul>
                         </li>
@@ -211,7 +210,7 @@
     </section> -->
     <!-- Story Section End -->
 
-    <section class="contact-from-section spad">
+    <!-- <section class="contact-from-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -244,7 +243,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
