--- a/about-us.html
+++ b/about-us.html
@@ -254,7 +254,7 @@
                         <img src="img/partner-logo/logo-1.png" alt="">
                     </div>
                 </a>
-                <a href="#" class="pl-table">
+                <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
                     </div>
