--- a/schedule.html
+++ b/schedule.html
@@ -683,7 +683,7 @@
                         </ul>
                         <div class="ct-links">
                             <span>Website:</span>
-                            <p>https://mint.gov.et</p>
+                            <a href="https://mint.gov.et" target="_blank">https://mint.gov.et</a>
                         </div>
                     </div>
                 </div>
@@ -707,7 +707,7 @@
                         <img src="img/partner-logo/logo-1.png" alt="">
                     </div>
                 </a>
-                <a href="#" class="pl-table">
+                <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
                     </div>
