--- a/sponsors.html
+++ b/sponsors.html
@@ -162,7 +162,7 @@
                         <img src="img/partner-logo/logo-3.png" alt="">
                     </div>
                 </a>
-                <a href="#" class="pl-table">
+                <a href="https://techethio.com/" target="_blank" class="pl-table">
                     <div class="pl-tablecell">
                         <img src="img/partner-logo/logo-4.png" alt="">
                     </div>
