May 08 comment update

--- a/hackathon.html
+++ b/hackathon.html
@@ -54,7 +54,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li class="active"><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -79,7 +79,7 @@
                         <h2>Hackathon</h2>
                         <ul>
                             <li><span>From <strong>May 18, 2024</strong></span></li>
-                            <li><span>To <strong>May 29, 2024</strong></span></li>
+                            <li><span>To <strong>May 20, 2024</strong></span></li>
                         </ul>
                     </div>
                 </div>
