--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                                 <li class="active"><a href="./index.html">Home</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li><a href="./about-us.html">About</a></li>
                             </ul>
@@ -362,7 +362,7 @@
                                             </div>
                                             <div class="col-lg-3">
                                                 <ul class="sc-widget">
-                                                    <li><i class="fa fa-clock-o"></i> 02:00 PM - 05:00 PM</li>
+                                                    <li><i class="fa fa-clock-o"></i> 08:00 AM - 05:00 PM</li>
                                                     <li><i class="fa fa-map-marker"></i> ICT Park Addis Ababa,
                                                         Ethiopia
                                                     </li>
@@ -1124,7 +1124,7 @@
                     <div class="latest-item set-bg large-item" data-setbg="img/blog/latest-b/latest-1.jpg">
                         <div class="li-tag">Marketing</div>
                         <div class="li-text">
-                            <h4><a href="./blog-details.html">Improve You Business Cards And Enchan Your Sales</a></h4>
+                            <h4><a href="./blog-details.html">Improve Your Business Cards And Enhance Your Sales</a></h4>
                             <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
