--- a/about-us.html
+++ b/about-us.html
@@ -54,7 +54,7 @@
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./hackathon.html">Hackathon</a></li>
                                 <li><a href="./sti-award.html">STI Award</a></li>
-                                <li><a href="./speaker.html">Exhibitor</a></li>
+                                <!-- <li><a href="./speaker.html">Exhibitor</a></li> -->
                                 <li><a href="./sponsors.html">Sponsors</a></li>
                                 <li class="active"><a href="./about-us.html">About</a></li>
                             </ul>
