--- a/sti-award.html
+++ b/sti-award.html
@@ -89,7 +89,7 @@
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-1.jpg">
+                            <div class="blog-item set-bg" data-setbg="img/blog/lifetime.png">
                                 <div class="bi-text">
                                     <h5>Lifetime Achievement Award</h5>
                                 </div>
