--- a/sti-award.html
+++ b/sti-award.html
@@ -96,28 +96,28 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-2.jpg">
+                            <div class="blog-item set-bg" data-setbg="img/blog/image-2.png">
                                 <div class="bi-text">
                                     <h5>The Best Digitally Enabled Institutions Award</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="blog-item set-bg large-item" data-setbg="img/blog/blog-4.jpg">
+                    <div class="blog-item set-bg large-item" data-setbg="img/blog/image-9.png">
                         <div class="bi-text">
                             <h3>Research Excellence Award</h3>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="blog-item set-bg large-item" data-setbg="img/blog/blog-3.jpg">
+                    <div class="blog-item set-bg large-item" data-setbg="img/blog/image-4.png">
                         <div class="bi-text">
                             <h3>STI Excellence Award (under the categories of Youth, Women, & Person with Disabilities)</h3>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
-                            <div class="blog-item set-bg" data-setbg="img/blog/blog-5.jpg">
+                            <div class="blog-item set-bg" data-setbg="img/blog/image-1.png">
                                 <div class="bi-text">
                                     <h3>Technological Innovation Award (honors the development of a new and impactful technology)</h3>
                                 </div>
