update sponsor list

--- a/sponsors.html
+++ b/sponsors.html
@@ -90,7 +90,7 @@
     <section class="speaker-section spad">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <!-- <div class="col-sm-6">
                     <div class="speaker-item">
                         <div class="row">
                             <div class="col-lg-6">
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
