--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,8 @@
                     <div class="latest-item set-bg large-item" data-setbg="img/blog/latest-b/latest-1.jpg">
                         <div class="li-tag">Marketing</div>
                         <div class="li-text">
-                            <h4><a href="./blog-details.html">Improve Your Business Cards And Enhance Your Sales</a></h4>
+                            <h4><a href="https://www.facebook.com/MInT.Ethiopia?mibextid=ZbWKwL">Improve Your Business Cards And Enhance Your Sales</a>
+                            </h4>
                             <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
                     </div>
@@ -1133,7 +1134,7 @@
                     <div class="latest-item set-bg" data-setbg="img/blog/latest-b/latest-2.jpg">
                         <div class="li-tag">Experience</div>
                         <div class="li-text">
-                            <h5><a href="./blog-details.html">All users on MySpace will know that there are millions of
+                            <h5><a href="https://www.facebook.com/MInT.Ethiopia?mibextid=ZbWKwL">All users on MySpace will know that there are millions of
                                     people out there.</a></h5>
                             <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
@@ -1141,7 +1142,7 @@
                     <div class="latest-item set-bg" data-setbg="img/blog/latest-b/latest-3.jpg">
                         <div class="li-tag">Marketing</div>
                         <div class="li-text">
-                            <h5><a href="./blog-details.html">A Pocket PC is a handheld computer, which features many of
+                            <h5><a href="https://www.facebook.com/MInT.Ethiopia?mibextid=ZbWKwL">A Pocket PC is a handheld computer, which features many of
                                     the same capabilities.</a></h5>
                             <span><i class="fa fa-clock-o"></i> 19th May, 2024</span>
                         </div>
