--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./participant.html');">Register Interest
+                            <p class="primary" onclick="window.open('./program-registration.html');">Register Interest
                             </p>
                         </li>
                         <li>
@@ -463,14 +463,6 @@
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/jquery.slicknav.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         var swiper = new Swiper('.swiper-container', {
             loop: true,
@@ -736,6 +728,14 @@
         // Call the function to generate the schedule dynamically
         generateSchedule();
     </script>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/main.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 </body>
 
