--- a/sponsors.html
+++ b/sponsors.html
@@ -39,7 +39,7 @@
                 <nav class="mainmenu">
                     <ul>
                         <li>
-                            <p class="primary" onclick="window.open('./participant.html', '_blank');">Register Interest
+                            <p class="primary" onclick="window.open('./program-registration.html', '_blank');">Register Interest
                             </p>
                         </li>
                         <li>
